deploy: 05d669adad93776afcded124abbe587de76892f9

--- a/listplace.html
+++ b/listplace.html
@@ -84,7 +84,7 @@
                         <td><a href="Graz.html">Graz</a></td>
                         <td>47.07083333333333</td>
                         <td>15.438611111111111</td>
-                        <td> # Graz</td>
+                        <td>#Graz</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4021912-4">GND</a></li>
@@ -93,14 +93,46 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="A67_41.xml">A-Gf A 67/41</a></li>
+                              <li><a href="A64_41.xml">A-Gf A 64/41</a></li>
+                              <li><a href="A67_19.xml">A-Gf A 67/19</a></li>
+                              <li><a href="A67_42.xml">A-Gf A 67/42</a></li>
+                              <li><a href="A67_17.xml">A-Gf A 67/17</a></li>
+                              <li><a href="S1_25.xml">A-Gf S 1/25</a></li>
+                              <li><a href="A64_42.xml">A-Gf A 64/42</a></li>
+                              <li><a href="S1_26.xml">A-Gf S 1/26</a></li>
+                              <li><a href="S1_18.xml">A-Gf S 1/18</a></li>
+                              <li><a href="S1_20.xml">A-Gf S 1/20</a></li>
+                              <li><a href="A64_39.xml">A-Gf A 64/39</a></li>
+                              <li><a href="S1_45.xml">A-Gf S 1/45</a></li>
+                              <li><a href="S1_39.xml">A-Gf S 1/39</a></li>
+                              <li><a href="A64_43.xml">A-Gf A 64/43</a></li>
+                              <li><a href="A67_23.xml">A-Gf A 67/23</a></li>
+                              <li><a href="A67_18.xml">A-Gf A 67/18</a></li>
+                              <li><a href="S1_28.xml">A-Gf S 1/28</a></li>
+                              <li><a href="A64_37.xml">A-Gf A 64/37</a></li>
+                              <li><a href="A63_51.xml">A-Gf A 63/51</a></li>
+                              <li><a href="S1_24.xml">A-Gf S 1/24</a></li>
+                              <li><a href="A67_20.xml">A-Gf A 67/20</a></li>
+                              <li><a href="S1_19.xml">A-Gf S 1/19</a></li>
+                              <li><a href="A64_40.xml">A-Gf A 64/40</a></li>
+                              <li><a href="A67_43.xml">A-Gf A 67/43</a></li>
+                              <li><a href="A67_27.xml">A-Gf A 67/27</a></li>
+                              <li><a href="S1_44.xml">A-Gf S 1/44</a></li>
+                              <li><a href="S1_30.xml">A-Gf S 1/30</a></li>
+                              <li><a href="S1_27.xml">A-Gf S 1/27</a></li>
+                              <li><a href="A67_22.xml">A-Gf A 67/22</a></li>
+                              <li><a href="A64_38.xml">A-Gf A 64/38</a></li>
+                              <li><a href="A67_21.xml">A-Gf A 67/21</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Ljubljana.html">Ljubljana</a></td>
                         <td>46.05138888888889</td>
                         <td>14.50611111111111</td>
-                        <td> # Ljubljana</td>
+                        <td>#Ljubljana</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4073953-3">GND</a></li>
@@ -109,14 +141,23 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="A64_41.xml">A-Gf A 64/41</a></li>
+                              <li><a href="A64_42.xml">A-Gf A 64/42</a></li>
+                              <li><a href="A64_39.xml">A-Gf A 64/39</a></li>
+                              <li><a href="A64_43.xml">A-Gf A 64/43</a></li>
+                              <li><a href="A64_37.xml">A-Gf A 64/37</a></li>
+                              <li><a href="A63_51.xml">A-Gf A 63/51</a></li>
+                              <li><a href="A64_40.xml">A-Gf A 64/40</a></li>
+                              <li><a href="A64_38.xml">A-Gf A 64/38</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Wien.html">Wien</a></td>
                         <td>48.208333333333336</td>
                         <td>16.3725</td>
-                        <td> # Wien</td>
+                        <td>#Wien</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4066009-6">GND</a></li>
@@ -125,14 +166,19 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="S1_76.xml">A-Gf S 1/76</a></li>
+                              <li><a href="S1_29.xml">A-Gf S 1/29</a></li>
+                              <li><a href="S1_75.xml">A-Gf S 1/75</a></li>
+                              <li><a href="S1_74.xml">A-Gf S 1/74</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Salzburg.html">Salzburg</a></td>
                         <td>47.8</td>
                         <td>13.045</td>
-                        <td> # Salzburg</td>
+                        <td>#Salzburg</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4076982-3">GND</a></li>
@@ -141,14 +187,20 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="S1_63.xml">A-Gf S 1/63</a></li>
+                              <li><a href="S1_70.xml">A-Gf S 1/70</a></li>
+                              <li><a href="S1_62.xml">A-Gf S 1/62</a></li>
+                              <li><a href="S1_72.xml">A-Gf S 1/72</a></li>
+                              <li><a href="S1_61.xml">A-Gf S 1/61</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Venedig.html">Venedig</a></td>
                         <td>45.439722222222</td>
                         <td>12.331944444444</td>
-                        <td> # Venedig</td>
+                        <td>#Venedig</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4062501-1">GND</a></li>
@@ -157,14 +209,21 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="S1_66.xml">A-Gf S 1/66</a></li>
+                              <li><a href="S1_65.xml">A-Gf S 1/65</a></li>
+                              <li><a href="S1_69.xml">A-Gf S 1/69</a></li>
+                              <li><a href="S1_64.xml">A-Gf S 1/64</a></li>
+                              <li><a href="S1_67.xml">A-Gf S 1/67</a></li>
+                              <li><a href="S1_68.xml">A-Gf S 1/68</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="MariaLankowitz.html">Maria Lankowitz</a></td>
                         <td>47.063888888889</td>
                         <td>15.063055555556</td>
-                        <td> # MariaLankowitz</td>
+                        <td>#MariaLankowitz</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4400654-8">GND</a></li>
@@ -173,14 +232,19 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="A64_34.xml">A-Gf A 64/34</a></li>
+                              <li><a href="S1_22.xml">A-Gf S 1/22</a></li>
+                              <li><a href="A64_37.xml">A-Gf A 64/37</a></li>
+                              <li><a href="S1_40.xml">A-Gf S 1/40</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Muenchen.html">München</a></td>
                         <td>48.1375</td>
                         <td>11.575</td>
-                        <td> # Muenchen</td>
+                        <td>#Muenchen</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4127793-4">GND</a></li>
@@ -189,14 +253,23 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="A67_19.xml">A-Gf A 67/19</a></li>
+                              <li><a href="A67_17.xml">A-Gf A 67/17</a></li>
+                              <li><a href="A67_23.xml">A-Gf A 67/23</a></li>
+                              <li><a href="A67_18.xml">A-Gf A 67/18</a></li>
+                              <li><a href="A67_20.xml">A-Gf A 67/20</a></li>
+                              <li><a href="A67_27.xml">A-Gf A 67/27</a></li>
+                              <li><a href="A67_22.xml">A-Gf A 67/22</a></li>
+                              <li><a href="A67_21.xml">A-Gf A 67/21</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="StPoelten.html">St. Pölten</a></td>
                         <td>48.2</td>
                         <td>15.616666666667</td>
-                        <td> # StPoelten</td>
+                        <td>#StPoelten</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4051622-2">GND</a></li>
@@ -205,14 +278,17 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="A67_44.xml">A-Gf A 67/44</a></li>
+                              <li><a href="S1_58.xml">A-Gf S 1/58</a></li>
+                           </ul>
                         </td>
                      </tr>
                      <tr>
                         <td><a href="Mautern.html">Mautern in Steiermark</a></td>
                         <td>47.4</td>
                         <td>14.833333333333</td>
-                        <td> # Mautern</td>
+                        <td>#Mautern</td>
                         <td>
                            <ul>
                               <li><a href="https://d-nb.info/gnd/4115047-8">GND</a></li>
@@ -221,7 +297,9 @@
                            </ul>
                         </td>
                         <td>
-                           <ul></ul>
+                           <ul>
+                              <li><a href="S1_23.xml">A-Gf S 1/23</a></li>
+                           </ul>
                         </td>
                      </tr>
                   </tbody>
