--- a/Pezzana.html
+++ b/Pezzana.html
@@ -69,7 +69,10 @@
             <div class="card-body"><small>Geburtsdatum: </small>1717<br/><small>Todesdatum: </small>1779<br/><small>Tätigkeit: </small>Drucker<br/><small>Wirkungsort: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1102696757" target="_blank">1102696757</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q105889193" target="_blank">Q105889193</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
-                  <ul></ul>
+                  <ul>
+                     <li><a href="S1_69.xml">A-Gf S 1/69</a></li>
+                     <li><a href="S1_64.xml">A-Gf S 1/64</a></li>
+                  </ul>
                </div>
             </div>
          </div>
