--- a/Mayr.html
+++ b/Mayr.html
@@ -69,7 +69,13 @@
             <div class="card-body"><small>Geburtsdatum: </small>1634<br/><small>Todesdatum: </small>1708<br/><small>Tätigkeit: </small>Drucker<br/><small>Wirkungsort: </small><a href="Salzburg.html" target="_blank">Salzburg</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/124751946" target="_blank">124751946</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
-                  <ul></ul>
+                  <ul>
+                     <li><a href="S1_63.xml">A-Gf S 1/63</a></li>
+                     <li><a href="S1_70.xml">A-Gf S 1/70</a></li>
+                     <li><a href="S1_62.xml">A-Gf S 1/62</a></li>
+                     <li><a href="S1_72.xml">A-Gf S 1/72</a></li>
+                     <li><a href="S1_61.xml">A-Gf S 1/61</a></li>
+                  </ul>
                </div>
             </div>
          </div>
