--- a/Voigt.html
+++ b/Voigt.html
@@ -69,7 +69,11 @@
             <div class="card-body"><small>Geburtsdatum: </small>1650<br/><small>Todesdatum: </small>1706<br/><small>Tätigkeit: </small>Drucker<br/><small>Wirkungsort: </small><a href="Wien.html" target="_blank">Wien</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1037512057" target="_blank">1037512057</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q56118770" target="_blank">Q56118770</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
-                  <ul></ul>
+                  <ul>
+                     <li><a href="S1_76.xml">A-Gf S 1/76</a></li>
+                     <li><a href="S1_75.xml">A-Gf S 1/75</a></li>
+                     <li><a href="S1_74.xml">A-Gf S 1/74</a></li>
+                  </ul>
                </div>
             </div>
          </div>
