deploy: d0a86fdbb2070c6f74e08244e3749e6334bbc142

--- a/toc.html
+++ b/toc.html
@@ -72,7 +72,7 @@
                      <th scope="col">Titel</th>
                      <th scope="col">Signatur</th>
                      <th scope="col">XML-TEI</th>
-                     <th scope="col">Datum</th>
+                     <th scope="col">Zeit</th>
                      <th scope="col">Liturgie</th>
                      <th scope="col">Provenienz</th>
                      <th scope="col">Drucker</th>
