deploy: 113f45bbe5ed6ed27ff82b200de47afba7f5771c

--- a/S1_29.html
+++ b/S1_29.html
@@ -74,14 +74,12 @@
                <div class="row" id="edition_metadata">
                   <h2 align="center">Prozessionale (A-Gf S 1/29)</h2>
                   <div class="row" id="fa_links">
-                     <div class="col-4" style="text-align:right">
-                        <h3><a href="A67_42.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
-                     </div>
+                     <div class="col-4" style="text-align:right"></div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="S1_29.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-4" style="text-align:left">
-                        <h3><a href="A67_22.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                        <h3><a href="S1_61.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                      </div>
                   </div>
                </div>
