--- a/A64_39.html
+++ b/A64_39.html
@@ -75,12 +75,14 @@
                   <h2 align="center">Graduale, Temporale (A-Gf A 64/39)</h2>
                   <div class="row" id="fa_links">
                      <div class="col-4" style="text-align:right">
-                        <h3><a href="A67_19.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                        <h3><a href="S1_64.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                      </div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="A64_39.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
-                     <div class="col-4" style="text-align:left"></div>
+                     <div class="col-4" style="text-align:left">
+                        <h3><a href="A67_23.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                     </div>
                   </div>
                </div>
                <div class="edition_container ">
