--- a/A67_17.html
+++ b/A67_17.html
@@ -75,13 +75,13 @@
                   <h2 align="center">Antiphonale (Passions- und Osterzeit) (A-Gf A 67/17)</h2>
                   <div class="row" id="fa_links">
                      <div class="col-4" style="text-align:right">
-                        <h3><a href="S1_75.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                        <h3><a href="A67_18.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                      </div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="A67_17.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-4" style="text-align:left">
-                        <h3><a href="S1_39.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                        <h3><a href="S1_62.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                      </div>
                   </div>
                </div>
