--- a/S1_67.html
+++ b/S1_67.html
@@ -81,7 +81,7 @@
                         <h3 align="center"><a href="S1_67.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-4" style="text-align:left">
-                        <h3><a href="A64_41.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                        <h3><a href="S1_76.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                      </div>
                   </div>
                </div>
