--- a/S1_68.html
+++ b/S1_68.html
@@ -75,7 +75,7 @@
                   <h2 align="center">Graduale Romanum (A-Gf S 1/68)</h2>
                   <div class="row" id="fa_links">
                      <div class="col-4" style="text-align:right">
-                        <h3><a href="S1_19.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                        <h3><a href="A64_40.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                      </div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="S1_68.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
