--- a/S1_70.html
+++ b/S1_70.html
@@ -75,13 +75,13 @@
                   <h2 align="center">Hymnarium Romanum (A-Gf S 1/70)</h2>
                   <div class="row" id="fa_links">
                      <div class="col-4" style="text-align:right">
-                        <h3><a href="A70_41.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                        <h3><a href="A67_41.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                      </div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="S1_70.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-4" style="text-align:left">
-                        <h3><a href="A67_43.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                        <h3><a href="S1_40.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                      </div>
                   </div>
                </div>
