--- a/A67_20.html
+++ b/A67_20.html
@@ -74,7 +74,7 @@
                <h2 align="center">Graduale (Teil 2) (A-Gf A 67/20)</h2>
                <div class="row" id="fa_links">
                   <div class="col-4" style="text-align:right">
-                     <h3><a href="S1_61.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                     <h3><a href="A70_41.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                   </div>
                   <div class="col-4 docinfo" style="text-align:center">
                      <h3 align="center"><a href="A67_20.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
