--- a/S1_44.html
+++ b/S1_44.html
@@ -74,12 +74,14 @@
                <h2 align="center">Antiphonale (Teil 1) (A-Gf S 1/44)</h2>
                <div class="row" id="fa_links">
                   <div class="col-4" style="text-align:right">
-                     <h3><a href="A67_21.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                     <h3><a href="S1_67.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                   </div>
                   <div class="col-4 docinfo" style="text-align:center">
                      <h3 align="center"><a href="S1_44.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                   </div>
-                  <div class="col-4" style="text-align:left"></div>
+                  <div class="col-4" style="text-align:left">
+                     <h3><a href="A64_43.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                  </div>
                </div>
             </div>
             <div class="wp-transcript">
