--- a/search.html
+++ b/search.html
@@ -75,7 +75,8 @@
                         <div id="stats-container"></div>
                         <div id="searchbox"></div>
                         <div id="clear-refinements"></div>
-                        <div>Verwenden Sie die Facetten unten, um die Ergebnisse zu verfeinern.</div>
+                        <div>Verwenden Sie die Filter, um die Ergebnisse zu verfeinern.</div>
+                        <div id="fuzzy-toggle"></div>
                         <div id="refinement-list-liturgie"></div>
                         <div id="refinement-list-genre"></div>
                         <div id="refinement-list-place"></div>
