--- a/toc.html
+++ b/toc.html
@@ -96,7 +96,7 @@
                      <td>420</td>
                      <td>310</td>
                      <td class="normal-text">Temporale, Sanctorale, Marienmessen, Kyriale, Sequenzen.Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_34" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_20.html">Graduale (Teil 2)</a></td>
@@ -110,7 +110,7 @@
                      <td>210</td>
                      <td>160</td>
                      <td class="normal-text">Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_20" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_17.html">Antiphonale (Passions- und Osterzeit)</a></td>
@@ -125,7 +125,7 @@
                      <td>160</td>
                      <td class="normal-text">Temporale: Passionssonntag bis Sonntag in der Himmelfahrtsoktav, Sanctorale: Annuntiatio
                         bis Inventio crucis.Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_17" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_19.html">Graduale (Teil 1)</a></td>
@@ -139,7 +139,7 @@
                      <td>210</td>
                      <td>160</td>
                      <td class="normal-text">Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_19" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_18.html">Antiphonale (Sommerteil)</a></td>
@@ -153,7 +153,7 @@
                      <td>205</td>
                      <td>160</td>
                      <td class="normal-text">Temporale und Sanctorale ab September.Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_18" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_22.html">Graduale (Teil 4)</a></td>
@@ -167,7 +167,7 @@
                      <td>210</td>
                      <td>160</td>
                      <td class="normal-text">Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_22" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_21.html">Graduale (Teil 3)</a></td>
@@ -181,7 +181,7 @@
                      <td>210</td>
                      <td>160</td>
                      <td class="normal-text">Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_21" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A64_42.html">Antiphonale (Diurnale)</a></td>
@@ -195,7 +195,7 @@
                      <td>540</td>
                      <td>380</td>
                      <td class="normal-text">Auch Psalterium, Hymnar.Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_42" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A64_43.html">Antiphonale (Nocturnale)</a></td>
@@ -209,7 +209,7 @@
                      <td>520</td>
                      <td>380</td>
                      <td class="normal-text">Matutin mit Hymnar, Psalterium.Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_43" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A64_41.html">Antiphonale (Winterteil)</a></td>
@@ -223,7 +223,7 @@
                      <td>550</td>
                      <td>380</td>
                      <td class="normal-text">Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_41" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A64_39.html">Graduale, Temporale</a></td>
@@ -265,7 +265,7 @@
                      <td>580</td>
                      <td>390</td>
                      <td class="normal-text">Kyriale, Heiligenmessen.Graduale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_38" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A64_40.html">Antiphonale (Sommerteil)</a></td>
@@ -279,7 +279,7 @@
                      <td>570</td>
                      <td>390</td>
                      <td class="normal-text">Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A64_40" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A63_51.html">Graduale, Sequentiar</a></td>
@@ -293,7 +293,7 @@
                      <td>535</td>
                      <td>370</td>
                      <td class="normal-text">Graduale, Sequentiar.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A63_51" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_44.html">Prozessionale</a></td>
@@ -335,7 +335,7 @@
                      <td>210</td>
                      <td>140</td>
                      <td class="normal-text">Das 4. Respons Buch: Ostern bis 1. August.Responsoriale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_42" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_43.html">Responsoriale</a></td>
@@ -349,7 +349,7 @@
                      <td>210</td>
                      <td>140</td>
                      <td class="normal-text">Ab Fronleichnam.Responsoriale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_43" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_41.html">Responsoriale</a></td>
@@ -363,7 +363,7 @@
                      <td>210</td>
                      <td>140</td>
                      <td class="normal-text">Das 4. Respons Buch: Ostern bis 1. August.Responsoriale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_41" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A67_27.html">Antiphonale</a></td>
@@ -377,7 +377,7 @@
                      <td>230</td>
                      <td>160</td>
                      <td class="normal-text">Pro divino officio in choro.Antiphonale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_27" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="S1_39.html">Litaneien, Lobgesänge</a></td>
@@ -405,7 +405,7 @@
                      <td>220</td>
                      <td>160</td>
                      <td class="normal-text">Palmsonntag, Maria Lichtmess.Prozessionale.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=A67_23" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="A70_23.html">Intonationsbüchlein</a></td>
@@ -480,7 +480,7 @@
                         in hunc usque annum a Summis Pontificibus concessa. Officium defunctorum, Psalmi Graduales
                         et Poenitentiales ..., mit Anhang: Hymni proprii Sanctorum Trium Ordinum Fratrum Minorum
                         S. P. Francisci.Hymnar.</td>
-                     <td></td>
+                     <td><a href="initials.html?shelfmark=S1_61" class="checkmark">✓</a></td>
                   </tr>
                   <tr>
                      <td><a href="S1_70.html">Hymnarium Romanum</a></td>
