--- a/S1_40.html
+++ b/S1_40.html
@@ -74,7 +74,7 @@
                <h2 align="center">Intonation book for celebrants (A-Gf S 1/40)</h2>
                <div class="row" id="fa_links">
                   <div class="col-4" style="text-align:right">
-                     <h3><a href="S1_64.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                     <h3><a href="A64_42.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                   </div>
                   <div class="col-4 docinfo" style="text-align:center">
                      <h3 align="center"><a href="S1_40.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
