--- a/S1_72.html
+++ b/S1_72.html
@@ -80,7 +80,7 @@
                      <h3 align="center"><a href="S1_72.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-4" style="text-align:left">
-                     <h3><a href="S1_70.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                     <h3><a href="A67_23.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                   </div>
                </div>
             </div>
