--- a/S1_28.html
+++ b/S1_28.html
@@ -73,12 +73,14 @@
             <div class="row" id="edition_metadata">
                <h2 align="center">Prozessionale (A-Gf S 1/28)</h2>
                <div class="row" id="fa_links">
-                  <div class="col-4" style="text-align:right"></div>
+                  <div class="col-4" style="text-align:right">
+                     <h3><a href="S1_30.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                  </div>
                   <div class="col-4 docinfo" style="text-align:center">
                      <h3 align="center"><a href="S1_28.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-4" style="text-align:left">
-                     <h3><a href="S1_76.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                     <h3><a href="S1_68.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                   </div>
                </div>
             </div>
