--- a/S1_30.html
+++ b/S1_30.html
@@ -74,13 +74,13 @@
                <h2 align="center">Intonationsbuch für Zelebranten (A-Gf S 1/30)</h2>
                <div class="row" id="fa_links">
                   <div class="col-4" style="text-align:right">
-                     <h3><a href="S1_27.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
+                     <h3><a href="D-MbsClm2766_Antiphonale_Aldersbach.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                   </div>
                   <div class="col-4 docinfo" style="text-align:center">
                      <h3 align="center"><a href="S1_30.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-4" style="text-align:left">
-                     <h3><a href="S1_72.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
+                     <h3><a href="S1_28.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                   </div>
                </div>
             </div>
