--- a/toc.html
+++ b/toc.html
@@ -621,6 +621,20 @@
                      <td></td>
                   </tr>
                   <tr>
+                     <td><a href="S1_26.html">Lamentationen</a></td>
+                     <td><a href="S1_26.html">A-Gf S 1/26</a></td>
+                     <td><a href="S1_26.xml">S1_26.xml</a></td>
+                     <td tabulator-data-sort="1732-06-16">1732</td>
+                     <td>OFM</td>
+                     <td><a href="Graz.html">Graz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>18</td>
+                     <td>250</td>
+                     <td>190</td>
+                     <td class="normal-text">Mit einzelnen Antiphonen der Trauermetten.Lamentationen.</td>
+                     <td></td>
+                  </tr>
+                  <tr>
                      <td><a href="S1_69.html">Antiphonarium Romanum</a></td>
                      <td><a href="S1_69.html">A-Gf S 1/69</a></td>
                      <td><a href="S1_69.xml">S1_69.xml</a></td>
@@ -714,6 +728,20 @@
                      <td></td>
                   </tr>
                   <tr>
+                     <td><a href="S1_23.html">Lamentationes Jeremiae Prophetae</a></td>
+                     <td><a href="S1_23.html">A-Gf S 1/23</a></td>
+                     <td><a href="S1_23.xml">S1_23.xml</a></td>
+                     <td tabulator-data-sort="1749-06-16">18. Jh.</td>
+                     <td>OFM</td>
+                     <td><a href="Mautern.html">Mautern</a></td>
+                     <td>[Handschrift]</td>
+                     <td>18</td>
+                     <td>230</td>
+                     <td>190</td>
+                     <td class="normal-text">Lamentationen.</td>
+                     <td></td>
+                  </tr>
+                  <tr>
                      <td><a href="S1_20.html">Orgelbuch</a></td>
                      <td><a href="S1_20.html">A-Gf S 1/20</a></td>
                      <td><a href="S1_20.xml">S1_20.xml</a></td>
@@ -792,6 +820,22 @@
                      <td></td>
                   </tr>
                   <tr>
+                     <td><a href="S1_25.html">Intonationsbuch für Zelebranten</a></td>
+                     <td><a href="S1_25.html">A-Gf S 1/25</a></td>
+                     <td><a href="S1_25.xml">S1_25.xml</a></td>
+                     <td tabulator-data-sort="1753-06-16">1753</td>
+                     <td>OFM</td>
+                     <td><a href="Graz.html">Graz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>42</td>
+                     <td>245</td>
+                     <td>185</td>
+                     <td class="normal-text">Antiphonarium de Tempore et Sanctis Pro Choro Graecensi: noviter conscriptum Iussu
+                        et Ordinatione M.V.P. Ioannis Nepomuc: Schmidt, eiusdem Conventus Guardiani Anno 1753.
+                        Intonationen der Antiphonen für die feierliche Vesper.Intonationsbuch.</td>
+                     <td></td>
+                  </tr>
+                  <tr>
                      <td><a href="S1_29.html">Prozessionale</a></td>
                      <td><a href="S1_29.html">A-Gf S 1/29</a></td>
                      <td><a href="S1_29.xml">S1_29.xml</a></td>
@@ -853,51 +897,9 @@
                      <td></td>
                   </tr>
                   <tr>
-                     <td><a href="S1_26.html"></a></td>
-                     <td><a href="S1_26.html"></a></td>
-                     <td><a href="S1_26.xml">S1_26.xml</a></td>
-                     <td tabulator-data-sort="NaN-NaN-NaN"></td>
-                     <td></td>
-                     <td></td>
-                     <td>[Handschrift]</td>
-                     <td></td>
-                     <td></td>
-                     <td></td>
-                     <td class="normal-text"></td>
-                     <td></td>
-                  </tr>
-                  <tr>
                      <td><a href="S1_58.html"></a></td>
                      <td><a href="S1_58.html"></a></td>
                      <td><a href="S1_58.xml">S1_58.xml</a></td>
-                     <td tabulator-data-sort="NaN-NaN-NaN"></td>
-                     <td></td>
-                     <td></td>
-                     <td>[Handschrift]</td>
-                     <td></td>
-                     <td></td>
-                     <td></td>
-                     <td class="normal-text"></td>
-                     <td></td>
-                  </tr>
-                  <tr>
-                     <td><a href="S1_25.html"></a></td>
-                     <td><a href="S1_25.html"></a></td>
-                     <td><a href="S1_25.xml">S1_25.xml</a></td>
-                     <td tabulator-data-sort="NaN-NaN-NaN"></td>
-                     <td></td>
-                     <td></td>
-                     <td>[Handschrift]</td>
-                     <td></td>
-                     <td></td>
-                     <td></td>
-                     <td class="normal-text"></td>
-                     <td></td>
-                  </tr>
-                  <tr>
-                     <td><a href="S1_23.html"></a></td>
-                     <td><a href="S1_23.html"></a></td>
-                     <td><a href="S1_23.xml">S1_23.xml</a></td>
                      <td tabulator-data-sort="NaN-NaN-NaN"></td>
                      <td></td>
                      <td></td>
