deploy: a9b31ff2568c3cb2f2a123d30b808583f873b78e

--- a/initials.html
+++ b/initials.html
@@ -362,9 +362,9 @@
                <h5 class="font-weight-bold hide-mobile align-left">KONTAKT:</h5>
                <div class="row">
                   <div class="footer-widget col-12 col-md-3 pad"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
-                  <div class="footer-widget col-1 col-md-7 align-left"><b class="hide-mobile">ACDH-CH</b>&nbsp;&nbsp;&nbsp;
+                  <div class="footer-widget col-1 col-md-7 align-left"><b class="hide-mobile">ACDH</b>&nbsp;&nbsp;&nbsp;
                      
-                     <p class="hide-mobile"><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
+                     <p class="hide-mobile"><b>Austrian Centre for Digital Humanities</b><br/>
                         Österreichische Akademie der Wissenschaften
                         <br/>
                         Bäckerstraße 13
@@ -385,7 +385,7 @@
                <h5 class="font-weight-bold hide-mobile align-left">​</h5>
                <div class="footer-widget">
                   <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie sich bitte an den
-                     <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">ACDH-CH Helpdesk</a>.</p>
+                     <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at">ACDH Helpdesk</a>.</p>
                </div>
             </div>
          </div>
