deploy: a9b31ff2568c3cb2f2a123d30b808583f873b78e

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                   und für die virtuelle
                   Bibliothek Europeana sowie für www.cantusplanus.at online über eine IIIF-Schnittstelle
                   zur Verfügung gestellt.
-                  Langzeitarchiviert werden die Daten im ACDH-CH-Repositorium ARCHE.</p>
+                  Langzeitarchiviert werden die Daten im ACDH-Repositorium ARCHE.</p>
                Teil des Projekts ist auch eine automatisierte Transkription der durchschnittlich
                2000 Liedtexte pro Codex
                mit Hilfe der KI-gestützten Applikation Transkribus. Dafür werden verschiedene Modelle
@@ -89,7 +89,7 @@
                des österreichischen kulturellen
                Erbes dar. Durch die vollständige Digitalisierung werden sowohl Bilder der Quellen
                als auch die durchsuchbaren
-               Volltexte der Gesänge open access zur Verfügung stehen. Das ACDH-CH der Österreichischen
+               Volltexte der Gesänge open access zur Verfügung stehen. Das ACDH der Österreichischen
                Akademie der Wissenschaften,
                Exzellenzzentrum für digitale Forschung und Musikwissenschaft, gewährleistet durch
                seine Expertise im
@@ -98,7 +98,7 @@
                Handschriftenbeschreibungen, bei der Metadatenverwaltung, der Visualisierung der Ergebnisse
                im Web als auch bei der
                Langzeitarchivierung.
-               In einem parallel laufenden und vom ACDH-CH finanzierten Teilprojekt werden geeignete
+               In einem parallel laufenden und vom ACDH finanzierten Teilprojekt werden geeignete
                Choralhandschriften des
                franziskanischen Korpus und bereits für www.cantusplanus.at digitalisierte Chorbücher
                für die Entwicklung einer
